--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 @import 'https://fonts.googleapis.com/css?family=Lato:400,700';
 
+html {
+    scroll-behavior: smooth;
+  }
+
 * {
   margin: 0;
   padding: 0;
